==================================
Rilascio v2.0.27    del 23/12/2017
==================================

Utilizzato __construct come costruttore di classe nei PHP.

==================================
Rilascio v2.0.26    del 05/09/2017
==================================

ryFamily: applicato lo stile in addfolder e additem.

==================================
Rilascio v2.0.25    del 02/09/2017
==================================

ryCheck: cambio di font per ovviare alle scelte non standard di Microsoft Edge per quanto riguarda i caratteri utf8 grafici.

==================================
Rilascio v2.0.24    del 02/09/2017
==================================

ryFrame: effettuati miglioramenti grafici.

ryQue: corretta la gestione dei tentativi.

ryFamily: corretto il refresh di posizionamento e ridimensionamento.

==================================
Rilascio v2.0.23    del 23/07/2017
==================================

Aggiunta la nuova libreria ryframe che contiene cornici e quadranti.

Migliorata la gestione dell'evento changed.

==================================
Rilascio v2.0.22    del 16/07/2017
==================================

ryText: corretto errore nella timerize.

==================================
Rilascio v2.0.21    del 16/07/2017
==================================

Rinnovata la gestione del pulsante Clear dei controlli: visibili sempre alla gotfocus.

Introdotto un periodo di latenza dei bottoni per evitare doppi invii.

ryText: migliorata la gestione di changed e temporize.

==================================
Rilascio v2.0.20    del 03/07/2017
==================================

Aggiunto una visualizzazione selezionabile e copiabile dei dati di maschera (ALT-W).

==================================
Rilascio v2.0.19    del 01/07/2017
==================================

ryList: corretto il fuoco al click.

ryText: corretta l'altezza.

Focus: diminuito il ritardo.

==================================
Rilascio v2.0.18    del 01/07/2017